feat: introduced new frontend implementation with Next.js
